# fanfic-ai

./: .env.example  main.py  pyproject.toml  readme.md  requirements.txt  test_story_generation.py
app/: main.py  story_service.py
app/models/: context.py  enums.py  exceptions.py  story.py
app/output/: story_1741313941.txt  story_1741335447.txt
app/templates/: chapter_prompt.txt  generate_input_prompt.txt  structure_examples.txt  structure_prompt.txt
